Correção boot tripleteen

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           />
           <div class="profile__info-wrapper">
             <div class="profile__info">
-              <div class="profile-text__icon">
+              <div class="profile__text-icon">
                 <h2 class="profile__user">Jacques Cousteau</h2>
                 <a class="profile__edit-button"></a>
               </div>
