Atualização de código após a avaliação

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,7 +14,7 @@
     <div class="page">
       <header class="header">
         <h1 class="header__title">
-          Arround
+          Around
           <span class="header__title-complement">The U.S.</span>
         </h1>
 
@@ -47,7 +47,7 @@
       </main>
 
       <footer class="footer">
-        <p class="footer__copyright">© 2025 Around The U.S.</p>
+        <p class="footer__copyright">&copy; 2025 Around The U.S.</p>
       </footer>
     </div>
 
@@ -112,10 +112,10 @@
     </div>
 
     <div class="modal" id="modalImage">
-      <div class="modal-image__content">
+      <div class="modal__image-content">
         <button class="modal__close-button" type="button">&times;</button>
         <img id="bigImageModal" src="" alt="" class="modal__image" />
-        <p id="imageTitle" class="modal-image__title"></p>
+        <p id="imageTitle" class="modal__image-title"></p>
       </div>
     </div>
 
