--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
             minlength="2"
             maxlength="40"
           />
-          <span id="name-error"></span>
+          <span
+            class="modal__error"
+            id="profile-name-error"
+            aria-live="polite"
+          ></span>
 
           <input
             type="text"
@@ -80,7 +84,7 @@
             minlength="2"
             maxlength="200"
           />
-          <span id="about-error"></span>
+          <span class="modal__error" id="about-error" aria-live="polite"></span>
 
           <button
             type="submit"
@@ -108,18 +112,33 @@
             name="placeTitle"
             placeholder="Título"
             required
+            minlength="2"
+            maxlength="30"
           />
+          <span
+            id="new-place-error"
+            class="modal__error"
+            aria-live="polite"
+          ></span>
 
           <input
-            type="text"
+            type="url"
             class="modal__input modal__input-link"
             id="add-link"
             name="imageLink"
             placeholder="Link de imagem"
             required
           />
+          <span id="add-link-error" class="modal__error"></span>
 
-          <button type="submit" class="modal__submit-button">Criar</button>
+          <button
+            type="submit"
+            class="modal__submit-button"
+            id="createButton"
+            disabled
+          >
+            Criar
+          </button>
         </form>
       </div>
     </div>
@@ -153,6 +172,6 @@
       </li>
     </template>
 
-    <script src="./scripts/index.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
