--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Around the US</title>
-    <link rel="stylesheet" type="text/css" href="./src/pages/index.css" />
+    <link rel="stylesheet" type="text/css" href="pages/index.css" />
     <link rel="icon" href="favicon.ico" />
   </head>
   <body>
@@ -163,6 +163,6 @@
       </li>
     </template>
 
-    <script type="module" src="./src/scripts/index.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
